--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Become an Event Owner and Host Events With Paintnite.com</title>
     <meta name="description" content="Join the home of the original paint and sip party! Create a side hustle using your artistic talents, meet new people, and be your own boss. Learn more.">
-    <link rel="icon" type="image/x-icon" href="./images/yay-icon.jpg">
+    <link rel="icon" type="image/x-icon" href="./assets/images/yay-icon.jpg">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://www.yaymaker.com/become-an-event-owner/">
