--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                             </div>
                         </div>
 
-                        <p class="table-badge"><span class="light">TRY </span><strong>UNLIMITED FOR FREE</strong></p>
+                        <p class="table-badge"><span class="light">TRY </span><span class="bold">UNLIMITED FOR FREE</span></p>
                         <div class="center join__btn--m">
                             <a href="./become-an-event-owner/account-setup/" class="primary__btn">Join Us</a>
                         </div>
@@ -310,9 +310,9 @@
             </section>
             <section class="hurry">
                 <div class="container">
-                    <h3><strong>Hurry, this offer won’t last.</strong></h3>
+                    <h3><span class="bold">Hurry, this offer won’t last.</span></h3>
                     <p>Sign up now and get Unlimited Tier benefits for your first three months
-                        without paying a thing! <strong>Hurry, this offer won’t last.</strong></p>
+                        without paying a thing! <span class="bold">Hurry, this offer won’t last.</span></p>
                     <div class="center">
                         <a href="./become-an-event-owner/account-setup/" class="primary__btn">Join Us</a>
                     </div>
